# GradleAndroidRustPlugin

./: LICENSE  README.md  build.gradle.kts  settings.gradle.kts
example/: .gitignore  build.gradle.kts  settings.gradle.kts
example/app/: build.gradle.kts
example/app/src/main/: AndroidManifest.xml
example/app/src/main/java/dev/matrix/rust/: MainActivity.kt
example/app/src/main/java/dev/rodroid/rust/: MainActivity.kt
example/app/src/main/jni/: Cargo.toml
example/app/src/main/jni/src/: lib.rs
example/app/src/main/res/layout/: activity_main.xml
example/app/src/main/res/menu/: menu_main.xml
example/app/src/main/res/navigation/: nav_graph.xml
example/app/src/main/res/values/: strings.xml  themes.xml
example/app/src/rust_library/src/: lib.rs
example/gradle/: libs.versions.toml
example/gradle/wrapper/: gradle-wrapper.properties
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
plugin/: build.gradle.kts
plugin/src/main/java/dev/matrix/agp/rust/: AndroidRustExtension.kt  AndroidRustPlugin.kt  RustBuildTask.kt  RustCleanTask.kt  RustInstaller.kt
plugin/src/main/java/dev/matrix/agp/rust/utils/: Abi.kt  Logger.kt  NullOutputStream.kt  Os.kt  ProjectExt.kt  SemanticVersion.kt
src/main/kotlin/dev/matrix/agp/rust/: AndroidRustExtension.kt  AndroidRustPlugin.kt  RustBuildTask.kt  RustInstaller.kt  RustTestTask.kt
src/main/kotlin/dev/matrix/agp/rust/utils/: Logger.kt  RustBinaries.kt
